[2025-04-19 19:03:54]	No se encontró una version válida	Ya pasan cantidad de items y subtotal a CartFragment
[2025-04-19 19:50:03]	No se encontró una version válida	Se muestran rows aunque vacaias en CartFragment
[2025-04-19 19:54:53]	No se encontró una version válida	Mas depuracion
[2025-04-19 21:41:14]	No se encontró una version válida	Solucionado problema de Cart
[2025-04-19 22:19:01]	No se encontró una version válida	Solo problemas de colores
[2025-04-22 07:24:20]	No se encontró una version válida	Borrado de carrito --ok
[2025-04-22 07:43:53]	No se encontró una version válida	Automatic update
[2025-04-22 08:00:08]	No se encontró una version válida	Advertencia de `Operacion pendiente`
[2025-04-22 19:27:52]	No se encontró una version válida	Es posible ya actualizar nombre items en vista Calc
[2025-04-22 21:01:19]	No se encontró una version válida	Completamente editables Items desde vista Calc
[2025-04-22 23:42:36]	No se encontró una version válida	Automatic update
[2025-04-23 08:31:29]	No se encontró una version válida	Nueva vista para editar items en modal
[2025-06-02 18:17:59]	No se encontró una version válida	Previo nuevas vistas
[2025-06-03 00:28:16]	No se encontró una version válida	GRADLE configurado para JETPACk COMPOSE
[2025-06-03 21:12:28]	No se encontró una version válida	COMPILA con JetPack Compose y Desugaring
[2025-06-04 10:36:45]	No se encontró una version válida	Automatic update
[2025-06-04 10:45:02]	No se encontró una version válida	Eliminado file dupe
[2025-06-08 15:08:56]	No se encontró una version válida	Incluida referencias a los .jar como dependences en app/build.gradle.kts
[2025-06-08 15:49:55]	No se encontró una version válida	.jar included
[2025-06-08 16:21:16]	No se encontró una version válida	Automatic update
[2025-06-08 18:37:11]	No se encontró una version válida	Automatic update
[2025-06-08 22:19:30]	No se encontró una version válida	Automatic update
[2025-06-09 01:52:19]	No se encontró una version válida	Automatic update