@@ -14,7 +14,7 @@
         android:title="Usuario"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_sync"
-        android:title="Sincronizar"
+        android:id="@+id/action_scanner_testing"
+        android:title="Probar Scanner"
         app:showAsAction="never" />
 </menu>
