@@ -78,3 +78,4 @@
 [2025-06-08 18:37:11]	No se encontró una version válida	Automatic update
 [2025-06-08 22:19:30]	No se encontró una version válida	Automatic update
 [2025-06-09 01:52:19]	No se encontró una version válida	Automatic update
+[2025-06-09 12:49:45]	No se encontró una version válida	Se ha creado utilidad SystemUtils.isEmulator()
